# cmakegen

./: .gitignore  LICENSE  README.md  TODO.md  setup.py
cmakegen/: __init__.py  cmake_lists.py  cmakegen_test.py  cpp_files.py  cpp_headers.py  data.py  files.py  generate.py  options.py  templates.py
cmakegen/data/: CMakeLists_exe.txt  CMakeLists_head.txt  CMakeLists_lib.txt  dependent.h  library.cpp  main.cpp  standalone.h
cmakegen/data/cmake/: base_exe.txt  base_header.txt  base_lib.txt  flags_interface.txt  header.txt  include_directories.txt  include_directories_headers.txt  warnings.txt
examples/testexe/: CMakeLists.txt
examples/testexe/include/testexe/: testexe.h
examples/testheader/: CMakeLists.txt
examples/testheader/include/testheader/: testheader.h
examples/testlib/: CMakeLists.txt
examples/testlib/source/: testlib.cpp
source/: __init__.py  cmake_lists.py  cmakegen.py  cpp_files.py
testexe/: CMakeLists.txt
testexe/include/testexe/: testexe.h
testexe/source/: main.cpp
testheader/: CMakeLists.txt
testheader/include/testheader/: testheader.h
testlib/: CMakeLists.txt
testlib/include/testlib/: testlib.h
testlib/source/: testlib.cpp
